# turtlebot3_deepRL

./: .gitignore  DOCKER.md  README.md
docker/: Dockerfile  docker-compose.cpu.yml  docker-compose.yml  entrypoint.sh
docs/: DOCKER.md  EVAL.md
src/turtlebot3_drl/: package.xml  setup.py
src/turtlebot3_drl/model/: __ddpg_testing_comparison.txt  __eval_comparison.csv  __td3_testing_comparison.txt
src/turtlebot3_drl/model/examples/ddpg_0_stage9/: _eval_stage9_eps8000_20260519-180241.csv  _test_stage9_eps8000_20260419-171840.txt  _test_stage9_eps8000_20260419-175722.txt  _test_stage9_eps8000_20260419-180424.txt
src/turtlebot3_drl/model/examples/redq_0_stage9/: _eval_stage9_eps3600_20260519-180724.csv  actor_stage9_episode3600.pt  stage9_episode3600.pkl
src/turtlebot3_drl/model/examples/td3_0_stage9/: _eval_stage9_eps7400_20260518-164336.csv  (+8 more)
src/turtlebot3_drl/turtlebot3_drl/common/: graph.py  settings.py  utilities.py
src/turtlebot3_drl/turtlebot3_drl/drl_agent/: drl_agent.py  redq.py
src/turtlebot3_drl/turtlebot3_drl/drl_environment/: drl_environment.py
src/turtlebot3_drl/turtlebot3_drl/drl_gazebo/: drl_gazebo.py
src/turtlebot3_drl/turtlebot3_drl/eval/: eval_runner.py  scenarios.yaml
src/turtlebot3_drl/turtlebot3_drl/utility/: gt_tf_publisher.py  path_publisher.py
src/turtlebot3_drl_gazebo/: CMakeLists.txt  package.xml
src/turtlebot3_drl_gazebo/hooks/: resource_paths.dsv.in
src/turtlebot3_drl_gazebo/launch/: turtlebot3_drl_stage9.launch.py
src/turtlebot3_drl_gazebo/models/drl_burger/: model.sdf
src/turtlebot3_drl_gazebo/models/turtlebot3_drl_world/ground_plane/: model.config  model.sdf
src/turtlebot3_drl_gazebo/models/turtlebot3_drl_world/obstacle11/: model.sdf
src/turtlebot3_drl_gazebo/models/turtlebot3_drl_world/obstacle12/: model.sdf
src/turtlebot3_drl_gazebo/models/turtlebot3_drl_world/obstacle3/: model.sdf
src/turtlebot3_drl_gazebo/models/turtlebot3_drl_world/obstacle4/: model.sdf
src/turtlebot3_drl_gazebo/models/turtlebot3_drl_world/obstacle7/: model.sdf
src/turtlebot3_drl_gazebo/models/turtlebot3_drl_world/obstacle8/: model.sdf
src/turtlebot3_drl_gazebo/params/: drl_bridge.yaml  nav2_params.yaml  slam_toolbox.yaml
src/turtlebot3_drl_gazebo/rviz/: drl_nav.rviz
src/turtlebot3_drl_gazebo/src/: obstacle_animator.cc
src/turtlebot3_drl_gazebo/worlds/: turtlebot3_drl_stage9.world
