<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_drl_gazebo</name>
  <version>0.1.0</version>
  <description>
    DRL-nav simulation assets for TurtleBot3 on ROS 2 Jazzy + Gazebo Harmonic
    (worlds, stage launches, and an SDF-configurable obstacle animator plugin).
  </description>
  <maintainer email="drlnav@example.com">drlnav</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gz_sim_vendor</depend>
  <depend>gz_math_vendor</depend>
  <depend>gz_plugin_vendor</depend>
  <depend>sdformat_vendor</depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
